fixing overflow issue

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -145,6 +145,7 @@ border-bottom: 1px solid #e0e0e0;
 color: var(--main-green);
 font-family: var(--main-font);
 text-decoration: none;
+white-space: nowrap;
 }
 
 .main-menu__dropdown a > i {
